# wqi_final

./: .gitignore  README.md
simulation_ws/src/autopatrol_interfaces/: package.xml
simulation_ws/src/autopatrol_robot/: package.xml  setup.py
simulation_ws/src/fishbot_application/: package.xml  setup.py
simulation_ws/src/fishbot_application_cpp/: package.xml
simulation_ws/src/fishbot_navigation2/: package.xml
simulation_ws/src/nav2_custom_controller/: package.xml
simulation_ws/src/nav2_custom_planner/: package.xml
simulation_ws/src/uavcar_application/: package.xml  setup.cfg  setup.py
simulation_ws/src/uavcar_application_cpp/: CMakeLists.txt  package.xml
simulation_ws/src/uavcar_description/: CMakeLists.txt  package.xml
simulation_ws/src/uavcar_description/config/: uavcar_ros2_controller.yaml
simulation_ws/src/uavcar_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
simulation_ws/src/uavcar_navigation2/: CMakeLists.txt  package.xml
simulation_ws/src/uavcar_navigation2/launch/: navigation2.launch.py
simulation_ws/src/ugvcar_application/: package.xml  setup.cfg
simulation_ws/src/ugvcar_application_cpp/: package.xml
simulation_ws/src/ugvcar_description/: CMakeLists.txt
simulation_ws/src/ugvcar_description/config/: ugvcar_ros2_controller.yaml
simulation_ws/src/ugvcar_description/launch/: gazebo_sim.launch.py
simulation_ws/src/ugvcar_navigation2/: package.xml
simulation_ws/src/ugvcar_navigation2/config/: nav2_params.yaml
wqi_final/: .gitignore  README.md
wqi_final/docs/: cooperative_delivery.md  evaluation_report.md  next_stage_task_spec.md  system_architecture.md  uav_battery.md  uav_subsystem.md
wqi_final/simulation_ws/: .gitignore
wqi_final/simulation_ws/src/cooperative_delivery/: CMakeLists.txt  package.xml
wqi_final/simulation_ws/src/cooperative_delivery/config/: cooperative_waypoints.yaml
wqi_final/simulation_ws/src/cooperative_delivery/cooperative_delivery/: __init__.py  cooperative_mission_manager.py  energy_planner.py  mission_config.py  mission_states.py
wqi_final/simulation_ws/src/cooperative_delivery/launch/: cooperative_delivery.launch.py
wqi_final/simulation_ws/src/cooperative_delivery/rviz/: cooperative.rviz
wqi_final/simulation_ws/src/cooperative_delivery/scripts/: cooperative_mission_manager
wqi_final/simulation_ws/src/cooperative_delivery/src/: ugv_uav_docking_plugin.cpp
wqi_final/simulation_ws/src/cooperative_delivery/test/: test_energy_planner.py  test_logger_calls.py  test_mission_config.py  test_mission_states.py
wqi_final/simulation_ws/src/simulation_ui/: package.xml  setup.cfg  setup.py
wqi_final/simulation_ws/src/simulation_ui/resource/: dashboard.qss
wqi_final/simulation_ws/src/simulation_ui/simulation_ui/: __init__.py  app.py  cargo_editor.py  config.py  main_window.py  process_manager.py
wqi_final/simulation_ws/src/simulation_ui/test/: test_cargo_editor.py  test_commands.py
wqi_final/simulation_ws/src/uav_application/: package.xml  setup.cfg  setup.py
wqi_final/simulation_ws/src/uav_application/launch/: uav_delivery.launch.py
wqi_final/simulation_ws/src/uav_application/resource/: uav_application
wqi_final/simulation_ws/src/uav_application/test/: test_mission_energy.py  test_mission_ordering.py  test_mission_state.py
wqi_final/simulation_ws/src/uav_application/uav_application/: __init__.py  delivery_mission_manager.py  mission_energy.py  mission_states.py
wqi_final/simulation_ws/src/uav_bringup/: CMakeLists.txt  package.xml
wqi_final/simulation_ws/src/uav_bringup/launch/: uav_sim.launch.py
wqi_final/simulation_ws/src/uav_control/: package.xml  setup.py
wqi_final/simulation_ws/src/uav_control/config/: battery_model.yaml  flight_control.yaml
wqi_final/simulation_ws/src/uav_control/launch/: uav_control.launch.py
wqi_final/simulation_ws/src/uav_control/resource/: uav_control
wqi_final/simulation_ws/src/uav_control/test/: test_battery_model.py  test_position_setpoint.py  test_safety_geometry.py  test_safety_policy.py
wqi_final/simulation_ws/src/uav_control/uav_control/: __init__.py  battery_manager.py  battery_model.py  flight_controller.py  flight_state_monitor.py  position_setpoint.py  safety_geometry.py  safety_monitor.py  safety_policy.py
wqi_final/simulation_ws/src/uav_description/: CMakeLists.txt  package.xml
wqi_final/simulation_ws/src/uav_description/config/: uav_model.yaml
wqi_final/simulation_ws/src/uav_description/launch/: uav_spawn.launch.py
wqi_final/simulation_ws/src/uav_description/rviz/: uav.rviz
wqi_final/simulation_ws/src/uav_description/test/: test_rviz_config.py
wqi_final/simulation_ws/src/uav_description/urdf/: uav.urdf.xacro
wqi_final/simulation_ws/src/uav_interfaces/: CMakeLists.txt  package.xml
wqi_final/simulation_ws/src/uav_interfaces/action/: ExecuteDelivery.action  FlyToPose.action
wqi_final/simulation_ws/src/uav_interfaces/srv/: CheckDeliveryEnergy.srv
wqi_final/simulation_ws/src/uav_navigation/: package.xml  setup.py
wqi_final/simulation_ws/src/uav_navigation/config/: airspace.yaml  uav_delivery_waypoints.yaml
wqi_final/simulation_ws/src/uav_navigation/launch/: uav_navigation.launch.py
wqi_final/simulation_ws/src/uav_navigation/resource/: uav_navigation
wqi_final/simulation_ws/src/uav_navigation/test/: test_route_optimizer.py  test_waypoints.py
wqi_final/simulation_ws/src/uav_navigation/uav_navigation/: __init__.py  route_optimizer.py  waypoint_navigator.py  waypoint_visualizer.py
wqi_final/simulation_ws/src/ugvcar_navigation2/: CMakeLists.txt  package.xml
wqi_final/simulation_ws/src/ugvcar_navigation2/behavior_trees/: navigate_to_pose_if_path_invalid.xml
wqi_final/simulation_ws/src/ugvcar_navigation2/config/: nav2_params.yaml
wqi_final/simulation_ws/src/ugvcar_navigation2/launch/: campus_navigation.launch.py  navigation2.launch.py
wqi_final/simulation_ws/src/ugvcar_navigation2/maps/: campus_delivery_map.pgm  campus_delivery_map.yaml  campus_keepout_mask.pgm  campus_keepout_mask.yaml
wqi_final/simulation_ws/src/ugvcar_navigation2/scripts/: gazebo_ground_truth_localizer.py
(+44 files in other folders)
