<?xml version="1.0"?>
<package format="3">
  <name>simulation_ui</name>
  <version>0.1.0</version>
  <description>Desktop control panel for the five campus delivery simulations.</description>
  <maintainer email="liyongqihhh@users.noreply.github.com">wqi</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cooperative_delivery</exec_depend>
  <exec_depend>cooperative_delivery_interfaces</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>ros2action</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>uav_bringup</exec_depend>
  <exec_depend>uav_interfaces</exec_depend>
  <exec_depend>ugvcar_application</exec_depend>
  <exec_depend>ugvcar_description</exec_depend>
  <exec_depend>ugvcar_navigation2</exec_depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export><build_type>ament_python</build_type></export>
</package>
