<?xml version="1.0"?>
<package format="3">
  <name>uav_application</name>
  <version>0.1.0</version>
  <description>Standalone campus UAV delivery mission manager.</description>
  <maintainer email="liyongqihhh@users.noreply.github.com">wqi</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>uav_control</depend>
  <depend>uav_interfaces</depend>
  <depend>uav_navigation</depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export><build_type>ament_python</build_type></export>
</package>
