<?xml version="1.0"?>
<package format="3">
  <name>uav_bringup</name>
  <version>0.1.0</version>
  <description>Standalone low-resource campus UAV simulation bringup.</description>
  <maintainer email="liyongqihhh@users.noreply.github.com">wqi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>uav_application</exec_depend>
  <exec_depend>uav_description</exec_depend>
  <exec_depend>ugvcar_description</exec_depend>
  <exec_depend>ugvcar_navigation2</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
